hphp/hack/test/typecheck/inout/bad_inout_decl_async.php.exp
File "bad_inout_decl_async.php", line 3, characters 25-29:
Parameters may not be marked `inout` on `async` functions (Parsing[1002])
